fixed mobile bug where text is too high

--- a/src/components/CenterText.css
+++ b/src/components/CenterText.css
@@ -28,6 +28,7 @@ p {
 
     .text-container {
       height: 160px;
+      top: calc(50% - 80px);
     }
 
 } 
